fixed overflow issue in summary

--- a/user-side/src/components/MovieDetails.css
+++ b/user-side/src/components/MovieDetails.css
@@ -151,9 +151,11 @@
     padding-top: 1em;
     text-align: justify;
     min-height: 40vh;
+    overflow: scroll;
     display: block;
     max-width: 700px;
 }
+
 .summary-wrap{
     word-wrap: break-word;
     max-width: 200px;
